--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.3",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "sqlite3": "^5.1.7"
   }
 }
